# qt6-android-template

./: .gitignore  README.md  example.keystore
basic-app/: CMakeLists.txt  README.md  build.cmd
manifest-file/: CMakeLists.txt  README.md  build.sh  main.cpp
manifest-file/android/: AndroidManifest.xml
manifest-file/android/res/drawable/: ic_example_foreground.xml
manifest-file/android/res/mipmap-anydpi-v26/: ic_example.xml
manifest-file/android/res/values/: ic_example_background.xml
manifest-file/qml/: main.qml
